# fire-control-data-science

./: .dockerignore  .gitignore  Dockerfile  README.md  RELATORIO_PROJETO.md  config_path.py  dados.txt  docker-compose.yml  pyproject.toml
api/: README.md  main.py
api/routers/: dados.py  metricas.py  modelos.py  predicao.py
api/schemas/: schemas.py
api/services/: dados_service.py  metricas_service.py  modelos_service.py  predicao_service.py
dashboard/: README.md  dashboard_base.py
data/: README.md
data_science/: config_path.py
features/: README.md
interactive_reports/: README.md
models/: modelo_intensidade_queimadas_mg.joblib  preditor_risco_fogo.joblib  scaler_risco.joblib
notebooks/: 1_pre_processamento.ipynb  2_eda.ipynb  3_feature_engineering.ipynb  4_ai.ipynb
scripts/: modeling.py  pre_processing.py  utils.py
